# eckwmsr

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs
.eck/: JOURNAL.md  ROADMAP.md  TECH_DEBT.md
.eck/lastsnapshot/: AnswerToSA.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260309_000001_initial_schema.rs
scraper/: .gitignore  package-lock.json  package.json  server.js
scripts/: create_user.js  eckwms_schema.sql  eckwms_schema_clean.sql  load_schema.js  package-lock.json  package.json  setup_local_db.js
src/: config.rs  db.rs  lib.rs  main.rs  web.rs
src/ai/: client.rs  mod.rs  prompts.rs
src/handlers/: admin_users.rs  ai.rs  analysis.rs  auth.rs  config.rs  crm.rs  delivery.rs  device.rs  file.rs  inventory.rs  mesh.rs  mesh_sync.rs  mesh_ws.rs  mod.rs  pairing.rs  pda_users.rs  picking.rs  print.rs  repair.rs  rma.rs  scan.rs  scraper_proxy.rs  support.rs  sync.rs  warehouse.rs  ws.rs
src/middleware/: auth.rs
src/models/: attachment.rs  checksum.rs  delivery_carrier.rs  delivery_tracking.rs  device_intake.rs  document.rs  file_resource.rs  inventory_discrepancy.rs  item.rs  location.rs  mesh_node.rs  mod.rs  move_line.rs  odoo_types.rs  order.rs  order_item_event.rs  partner.rs  picking.rs  product.rs  product_alias.rs  quant.rs  rack.rs  registered_device.rs  stock_picking_delivery.rs  sync_history.rs  sync_packet.rs  user.rs
src/services/: delivery.rs  delivery_dhl.rs  delivery_opal.rs  filestore.rs  mod.rs  (+5 more)
tests/: sync_tests.rs
web/: package-lock.json  package.json  svelte.config.js
(+613 files in other folders)
