[package]
name = "eckwmsr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.2"
mime_guess = "2.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rig-core = "0.30"
anyhow = "1.0"
thirtyfour = "0.35"
regex = "1.10"
printpdf = { version = "0.7", features = ["embedded_images"] }
qrcode = "0.14"
crc32fast = "1.3"
